--- a/react_client/package.json
+++ b/react_client/package.json
@@ -24,6 +24,7 @@
     "lint": "eslint ./src"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.10.0",
     "eslint": "^4.14.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.1",
-    "redux-devtools": "^3.4.1"
+    "redux-devtools": "^3.4.1",
+    "redux-mock-store": "^1.4.0"
   }
 }
