--- a/react_client/package.json
+++ b/react_client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-star-rating-component": "^1.3.0",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
