--- a/react_client/package.json
+++ b/react_client/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^3.3.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loading": "^1.0.3",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "react-star-rating-component": "^1.3.0",
