--- a/react_client/package.json
+++ b/react_client/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0-alpha.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loading": "^1.0.3",
